--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ crossbeam = "0.8.2"
 serde = { version = "1.0.152", features = ["derive"] }
 ron = "0.8.0"
 thiserror = "1.0.38"
+tokio-tungstenite = "0.18.0"
+tokio = { version = "1.25.0", features = ["full"] }
+futures-util = "0.3.26"
+rusttype = {version = "0.9.3", features = ["gpu_cache"]}
